# Bert-VITS2-MNN

./: .gitattributes  .gitmodules  README.md  README_en.md  app_version.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/bertvits2mnn/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/assets/bert/: chinese-roberta-wwm-ext-large-distilled-fp16.mnn
app/src/main/assets/assets/bert/jp/: tokenizer.json
app/src/main/assets/assets/bv2_model/: bert_vits23_dec_genshin_arknights_fp16.mnn  bert_vits23_dp_genshin_arknights_fp16.mnn  bert_vits23_emb_genshin_arknights_fp16.mnn  bert_vits23_enc_genshin_arknights_fp16.mnn  bert_vits23_flow_genshin_arknights_fp16.mnn  bert_vits23_sdp_genshin_arknights_fp16.mnn  config.json
app/src/main/java/com/example/bertvits2mnn/: BV2Application.kt  MainActivity.kt  SoundPlayHandler.kt  VoiceGenerationScreen.kt  VoiceViewModel.kt
app/src/main/java/com/example/bertvits2mnn/preprocess/: BV2Preprocess.kt  Normalizer.kt  Symbols.kt  ToneSandhi.kt
app/src/main/java/com/example/bertvits2mnn/utils/: FileExt.kt  FileUtils.kt  SaveWavUtils.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/bertvits2mnn/: ExampleUnitTest.kt
bertvits2/: build.gradle
bertvits2/src/androidTest/java/com/example/bertvits2/: ExampleInstrumentedTest.kt
bertvits2/src/main/cpp/: CMakeLists.txt  bert_vits2_loader.hpp  bert_vits2_loader_v2.cpp  bert_vits2_v23_loader.cpp  bertvits2.cpp
bertvits2/src/main/java/com/example/bertvits2/: BertVITS2JNI.kt
bertvits2/src/test/java/com/example/bertvits2/: ExampleUnitTest.kt
cppjieba/: build.gradle
cppjieba/src/androidTest/java/com/example/cppjieba/: ExampleInstrumentedTest.kt
cppjieba/src/main/cpp/: CMakeLists.txt  cppjieba.cpp
cppjieba/src/test/java/com/example/cppjieba/: ExampleUnitTest.kt
cpptokenizer/: build.gradle
cpptokenizer/src/androidTest/java/com/example/cpptokenizer/: ExampleInstrumentedTest.kt
cpptokenizer/src/main/cpp/: CMakeLists.txt  cpptokenizer.cpp
cpptokenizer/src/main/java/com/example/cpptokenizer/: CppTokenizerJNI.kt
cpptokenizer/src/test/java/com/example/cpptokenizer/: ExampleUnitTest.kt
distill/: BertModelDistill.py  README.md  bert_distill_onnx_export.py  combine_bert_model.py  preprocess_text.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
openjtalk/: build.gradle
openjtalk/src/androidTest/java/com/example/openjtalk/: ExampleInstrumentedTest.kt
openjtalk/src/main/cpp/: CMakeLists.txt  openjtalk_jni.cpp
openjtalk/src/main/cpp/openjtalk/api/: api.cpp  api.h
openjtalk/src/main/cpp/openjtalk/mecab/: dictionary.cpp
openjtalk/src/main/java/com/example/openjtalk/: OpenJTalkJNI.kt
openjtalk/src/test/java/com/example/openjtalk/: ExampleUnitTest.kt
text-preprocess/: build.gradle
text-preprocess/src/androidTest/java/com/example/text_preprocess/: ExampleInstrumentedTest.kt
text-preprocess/src/main/java/com/example/textpreprocess/ch/: BV2Preprocess.kt  Normalizer.kt  Symbols.kt  ToneSandhi.kt
text-preprocess/src/main/java/com/example/textpreprocess/jp/: Constant.kt  JPBV2Preprocess.kt
text-preprocess/src/test/java/com/example/text_preprocess/: ExampleUnitTest.kt
